<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".MainActivity">

    <android.widget.Button
        android:id="@+id/boton_actividad_dos"
        style="@style/botones_activity_uno"
        android:text="@string/boton_actividad_dos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418"
        android:onClick="irBBDD"/>

    <android.widget.Button
        android:id="@+id/boton_actividad_tres"
        style="@style/botones_activity_uno"
        android:text="@string/boton_actividad_tres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_actividad_dos"
        app:layout_constraintVertical_bias="0.246"
        android:onClick="irFotomaton"/>

    <android.widget.Button
        android:id="@+id/boton_actividad_cuatro"
        style="@style/botones_activity_uno"
        android:text="@string/boton_actividad_cuatro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_actividad_tres"
        android:onClick="irGaleria"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="372dp"
        android:layout_height="162dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/salvaje" />

    <android.widget.Button
        android:id="@+id/boton_pause"
        style="@style/botones_musica"
        android:text="@string/pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        android:onClick="para_musica"/>

    <android.widget.Button
        android:id="@+id/boton_play"
        style="@style/botones_musica"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        android:onClick="empieza_musica"/>


</androidx.constraintlayout.widget.ConstraintLayout>